--- a/src/component/calculator.css
+++ b/src/component/calculator.css
@@ -13,30 +13,34 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-top: 50%;
-  margin-bottom: 10%;
+  margin-top: 5%;
 }
 
 .valueInputs {
   border-radius: 10px;
+  border: 5px inset #636365;
   background-color: #858693;
-  width: 40%;
-  height: 90px;
+  width: 30%;
+  padding-bottom: 10px;
+  height: 70px;
 }
 
 .displayResult {
-  font-size: 40px;
+  font-size: 37px;
   display: flex;
-  padding-right: 10px;
+  padding-right: 80px;
   align-items: flex-end;
   justify-content: flex-end;
-  color: #d1cdcd;
+  color: #ece6e6;
 }
 
 .calcBody {
+  border: 5px inset #636365;
   display: grid;
+  background-color: #858693;
+  border-radius: 10px;
   grid-template-columns: auto auto auto auto;
-  width: 40%;
+  width: 30%;
 }
 
 .btn {
@@ -44,7 +48,7 @@ body {
   font-size: 30px;
   background-color: #e0e0e0;
   border: 1px solid #b1adad;
-  height: 97px;
+  height: 80px;
   cursor: pointer;
   border-radius: 10px;
 }
@@ -55,7 +59,7 @@ body {
 
 .btnZero {
   font-family: 'Tiro Telugu', serif;
-  height: 97px;
+  height: 80px;
   cursor: pointer;
   border-radius: 10px;
   font-size: 30px;
