--- a/src/component/calculator.css
+++ b/src/component/calculator.css
@@ -13,7 +13,6 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-top: 5%;
 }
 
 .valueInputs {
@@ -75,4 +74,11 @@ body {
 .btnclick {
   font-family: 'Orbitron', sans-serif;
   background-color: #f5913e;
+}
+
+.mainContainer h2 {
+ text-align: start;
+ width: 100%;
+ padding-left: 5rem;
+ margin:0;
 }
